<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red_white"
    tools:context=".ui.Registration.LoginActivity">

        <TextView
            android:id="@+id/tv_forgetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:layout_marginEnd="@dimen/_18sdp"
            android:layout_marginStart="@dimen/_18sdp"
            android:paddingStart="@dimen/_6sdp"
            android:gravity="start|center_vertical"
            android:text="@string/forget_password"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.894"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hidePassword" />



    <EditText
        android:id="@+id/ed_login_userName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_52sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@drawable/input_frame"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="@dimen/_12sdp"
        android:gravity="center_vertical"
        android:hint="@string/email"
        android:imeOptions="actionNext"
        android:inputType="textAutoComplete"
        android:paddingStart="@dimen/_18sdp"
        android:paddingEnd="@dimen/_18sdp"
        android:paddingBottom="@dimen/_4sdp"
        android:paddingTop="@dimen/_4sdp"
        android:textSize="24sp"
        android:paddingLeft="@dimen/_12sdp"
        android:paddingRight="@dimen/_12sdp"
        android:fontFamily="@font/cairo_extra_light"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="350dp"
        android:layout_height="254dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:text="@string/sign_up"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />
    </LinearLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/hidePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColorHint="@color/white"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_login_userName"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/ed_login_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/input_frame"
            android:drawableTint="@color/white"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="@dimen/_12sdp"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_18sdp"
            android:paddingEnd="@dimen/_180sdp"
            android:paddingBottom="@dimen/_4sdp"
            android:paddingTop="@dimen/_4sdp"
            android:textSize="24sp"
            android:fontFamily="@font/cairo_extra_light"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:paddingLeft="@dimen/_8sdp"
            android:paddingRight="@dimen/_8sdp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_80sdp"
        android:layout_marginEnd="@dimen/_80sdp"
        android:layout_marginBottom="@dimen/_60sdp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/cairo_light"
        android:foreground="?attr/selectableItemBackground"
        android:paddingStart="@dimen/_50sdp"
        android:paddingEnd="@dimen/_50sdp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_forgetPassword"
        app:layout_constraintVertical_bias="0.758" />


</androidx.constraintlayout.widget.ConstraintLayout>