<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/red_white"
    tools:context=".ui.Registration.RegisterActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/_35sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/cairo_extra_light"
                        android:text="create"
                        android:textColor="@color/white"
                        android:textSize="30sp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/cairo_bold"
                        android:padding="10dp"
                        android:text="account"
                        android:textColor="@color/white"
                        android:textSize="35sp" />
                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginStart="120dp"
                    android:layout_marginEnd="120dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="-25dp"
                    android:src="@drawable/line_shape"/>


                <EditText
                    android:id="@+id/ed_register_userName"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:background="@drawable/input_frame"
                    android:drawableStart="@drawable/ic_user"
                    android:hint="@string/username"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginLeft="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:layout_marginRight="@dimen/_16sdp"
                    android:drawablePadding="@dimen/_12sdp"
                    android:fontFamily="@font/cairo_extra_light"
                    android:paddingStart="@dimen/_14sdp"
                    android:paddingLeft="@dimen/_8sdp"
                    android:paddingTop="@dimen/_4sdp"
                    android:paddingEnd="@dimen/_14sdp"
                    android:paddingRight="@dimen/_8sdp"
                    android:paddingBottom="@dimen/_4sdp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/registerUser" />
                <EditText
                    android:id="@+id/ed_register_email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:background="@drawable/input_frame"
                    android:drawableStart="@drawable/ic_email"
                    android:hint="@string/email"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginLeft="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:layout_marginRight="@dimen/_16sdp"
                    android:drawablePadding="@dimen/_12sdp"
                    android:fontFamily="@font/cairo_extra_light"
                    android:paddingStart="@dimen/_14sdp"
                    android:paddingLeft="@dimen/_8sdp"
                    android:paddingTop="@dimen/_4sdp"
                    android:paddingEnd="@dimen/_14sdp"
                    android:paddingRight="@dimen/_8sdp"
                    android:paddingBottom="@dimen/_4sdp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/number" />
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/hidePasswordSignIN"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/white"
                    android:layout_marginTop="-4dp"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/ed_register_password"
                        android:background="@drawable/input_frame"
                        android:drawableStart="@drawable/ic_password"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_50sdp"
                        android:layout_marginLeft="@dimen/_16sdp"
                        android:layout_marginTop="@dimen/_6sdp"
                        android:layout_marginRight="@dimen/_16sdp"
                        android:drawablePadding="@dimen/_12sdp"
                        android:fontFamily="@font/cairo_extra_light"
                        android:paddingStart="@dimen/_14sdp"
                        android:paddingLeft="@dimen/_8sdp"
                        android:paddingTop="@dimen/_4sdp"
                        android:paddingEnd="@dimen/_14sdp"
                        android:paddingRight="@dimen/_8sdp"
                        android:paddingBottom="@dimen/_4sdp"
                        android:textColor="@color/white"
                        android:hint="@string/password"
                        android:textColorHint="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"/>
                </com.google.android.material.textfield.TextInputLayout>
                <EditText
                    android:id="@+id/ed_register_number"
                    android:hint="@string/number"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginLeft="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:layout_marginRight="@dimen/_16sdp"
                    android:drawablePadding="@dimen/_12sdp"
                    android:fontFamily="@font/cairo_extra_light"
                    android:paddingStart="@dimen/_14sdp"
                    android:paddingLeft="@dimen/_8sdp"
                    android:paddingTop="@dimen/_4sdp"
                    android:paddingEnd="@dimen/_14sdp"
                    android:paddingRight="@dimen/_8sdp"
                    android:paddingBottom="@dimen/_4sdp"
                    android:background="@drawable/input_frame"
                    android:drawableStart="@drawable/ic_phone"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    />


                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_80sdp"
                    android:layout_marginTop="@dimen/_55sdp"
                    android:layout_marginEnd="@dimen/_80sdp"
                    android:layout_marginBottom="@dimen/_12sdp"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:foreground="?attr/selectableItemBackground"
                    android:fontFamily="@font/cairo_light"
                    android:text="@string/sign_up"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintVertical_bias="1.0" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginBottom="22dp"
                    android:orientation="horizontal"
                    android:weightSum="4">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight=".7"
                        android:paddingEnd="8dp"
                        android:textColor="@color/black"
                        android:text="@string/already_member"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/tv_register_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:foreground="?attr/selectableItemBackgroundBorderless"
                        android:layout_weight="1"
                        android:text="@string/login"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>