<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red_white"
    tools:context=".ui.UserProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_user_profile"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="@dimen/_8sdp"
            android:text="profile"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"/>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/fl_user_image"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_150sdp"
                android:layout_marginTop="@dimen/_20sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" >
                <ImageView
                    android:id="@+id/iv_userImg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_4sdp"
                    android:background="#E4E4E4"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_user"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/image_frame"/>
            </FrameLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:textColorHint="@color/white"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_4sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fl_user_image" >
                <EditText
                    android:id="@+id/ed_fullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_frame"
                    android:padding="@dimen/_14sdp"
                    android:textColor="@color/white"
                    android:inputType="text"
                    android:layout_marginBottom="@dimen/_4sdp"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColorHint="@color/white"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_4sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_fullname" >
                <EditText
                    android:id="@+id/ed_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_frame"
                    android:padding="@dimen/_14sdp"
                    android:textColor="@color/white"
                    android:inputType="text"
                    android:layout_marginBottom="@dimen/_4sdp"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/number"
                android:textColorHint="@color/white"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_4sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_email" >
                <EditText
                    android:id="@+id/ed_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input_frame"
                    android:padding="@dimen/_14sdp"
                    android:textColor="@color/white"
                    android:inputType="phone"
                    android:layout_marginBottom="@dimen/_4sdp"/>
            </com.google.android.material.textfield.TextInputLayout>
            <RadioGroup
                android:id="@+id/group_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:textColorHint="@color/white"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_4sdp"
                app:layout_constraintEnd_toEndOf="parent"
                android:orientation="horizontal"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_phone" >
                <RadioButton
                    android:id="@+id/rd_male"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:textSize="@dimen/_14sdp"
                    android:text="male"/>
                <RadioButton
                    android:id="@+id/rd_female"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/_14sdp"
                    android:text="female"/>

            </RadioGroup>
            <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:text="Submit"
                android:textSize="@dimen/_18sdp"
                android:textColor="@color/white"
                style="?attr/buttonStyle"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_4sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/group_gender" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>